# math

./: .gitignore  CMakeLists.txt  README.md
fib/: fib.c
scripts/: sqr_bench.sh
sqr/: sqr.c  sqr.h  test.c
src/: fib.c
